--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
